# libjpeg-turbo-android-bindings

./: .gitignore  LICENSE  README.md  README.md.backup  UPGRADE_GUIDE.md  build.gradle  local.properties  publish.sh  settings.gradle
api/: build.gradle
api/src/main/java/ro/andob/jpegturbo/: ExitCodes.java  FileIOUtils.java  JPEGReencodeArgs.java  JPEGTurbo.java  Jpegli.java  Mozjpeg.java  NativeImplementation.java  Reencoder.java
bindings/: build.gradle
bindings-jpegli/: build.gradle
bindings-jpegli/src/main/java/ro/andob/jpegturbo/: JpegliNative.java
bindings-jpegturbo/: build.gradle
bindings-jpegturbo/src/main/java/ro/andob/jpegturbo/: JPEGTurboNative.java
bindings-mozjpeg/: build.gradle
bindings-mozjpeg/src/main/java/ro/andob/jpegturbo/: MozjpegNative.java
bindings/src/main/cpp/: Bindings.c  CMakeLists.txt  jpegtranmod.c
bindings/src/main/cpp/libjpeg-turbo-2.1.4/: cdjpeg.h  jcapistd.c  jchuff.c  jcmainct.c  jcmarker.c  jcmaster.c  jconfigint.h  jcparam.c  jctrans.c  jdapimin.c  jdcoefct.h  jdcolor.c  jddctmgr.c  jdhuff.c  jdmarker.c  jdmaster.c  jdmerge.h  jdtrans.c  jerror.c  jerror.h  jfdctint.c  jmemmgr.c  jpegint.h  jpeglib.h  jpegtran.c  jsimd_none.c  rdswitch.c
bindings/src/main/cpp/libjpeg-turbo-2.1.4/simd/arm/: jcsample-neon.c  jidctfst-neon.c  jidctint-neon.c
bindings/src/main/cpp/libjpeg-turbo-2.1.4/simd/arm/aarch32/: jsimd.c
bindings/src/main/cpp/libjpeg-turbo-2.1.4/simd/arm/aarch64/: jchuff-neon.c  jsimd.c
bindings/src/main/cpp/libjpeg-turbo-2.1.4/simd/mips64/: jsimd.c
bindings/src/main/cpp/libjpeg-turbo-2.1.4/simd/nasm/: jsimdcfg.inc.h
bindings/src/main/cpp/libjpeg-turbo-2.1.4/simd/powerpc/: jsimd.c
bindings/src/main/java/ro/andob/jpegturbo/: FileIOUtils.java  JPEGReencodeArgs.java  JPEGTranArgs.java  JPEGTurbo.java
gradle/wrapper/: gradle-wrapper.properties
native/: Bindings.c  CMakeLists.txt
native/libjpeg-turbo-2.1.4/: cjpeg.c  jaricom.c  jcapimin.c  jcarith.c  jccoefct.c  jcdctmgr.c  jcinit.c  jconfigint.h  jcphuff.c  jdicc.c  jdinput.c  jdphuff.c  jfdctflt.c  jfdctfst.c  jidctfst.c  jmemnobs.c  jmorecfg.h  jutils.c  jversion.h  turbojpeg.c
native/libjpeg-turbo-2.1.4/simd/arm/: jcphuff-neon.c  jdcolor-neon.c  jdsample-neon.c  jquanti-neon.c
native/libjpeg-turbo-2.1.4/simd/arm/aarch32/: jchuff-neon.c
native/libjpeg-turbo-2.1.4/simd/mips/: jsimd.c
native/libjpeg-turbo-2.1.4/simd/mips64/: jsimd_mmi.h
native/libjpeg-turbo-2.1.4/simd/powerpc/: jsimd_altivec.h
native/mozjpeg-4.1.1/: cmyk.h  jcapimin.c  jcapistd.c  jcarith.c  jccoefct.c  jccolor.c  jcdctmgr.c  jcext.c  jcicc.c  jcinit.c  jcmarker.c  jcmaster.c  jcomapi.c  jcparam.c  jcphuff.c  jcprepct.c  jcsample.c  jctrans.c  jdapimin.c  jdarith.c  jddctmgr.c  jdmainct.h  jdmerge.c  jdpostct.c  jdsample.h  jidctflt.c  jidctint.c  jidctred.c  jmemmgr.c  jpegint.h  jquant1.c  jquant2.c  transupp.c
native/mozjpeg-4.1.1/simd/arm/: jccolor-neon.c  jcgray-neon.c  jdmerge-neon.c  jfdctfst-neon.c  jfdctint-neon.c  jidctred-neon.c
native/mozjpeg-4.1.1/simd/arm/aarch32/: jsimd.c
native/mozjpeg-4.1.1/simd/arm/aarch64/: jsimd.c
native/mozjpeg-4.1.1/simd/i386/: jsimd.c
native/mozjpeg-4.1.1/simd/mips/: jsimd.c
native/mozjpeg-4.1.1/simd/mips64/: jsimd.c
native/mozjpeg-4.1.1/simd/powerpc/: jsimd.c
native/mozjpeg-4.1.1/simd/x86_64/: jsimd.c
sample/: build.gradle
sample/src/main/: AndroidManifest.xml
sample/src/main/java/ro/andob/jpegturbo/sample/: App.java  MainActivity.java
sample/src/main/res/xml/: provider_paths.xml
